package com.reedsloan.beekeepingapp.core.util

object TestTags {
    const val AD_VIEW: String = "ad_view"
    const val LAZY_VERTICAL_GRID: String = "lazy_vertical_grid"
    const val DELETE_HIVE_CONFIRMATION_BUTTON: String = "delete_hive_confirmation_button"
    const val CONTEXT_MENU_ITEM: String = "context_menu_item"
    const val CONTEXT_MENU_BUTTON: String = "context_menu_button"
    const val ADD_HIVE_BUTTON = "add_hive_button"
    const val HIVE_CARD = "hive_card"
}