...
        onDismissRequest = { onDismiss() }, title = {
            Text(text = "Delete hive?")
        }, text = {
            Text(text = "Are you sure you want to delete this hive?")
        }, confirmButton = {
            Button(onClick = { onClick() }) {
                Text(text = "Delete")
            }
        }, dismissButton = {
            Button(onClick = { onDismiss() }) {
                Text(text = "Cancel")
            }
        })
...
