...
                        backgroundColor = customTheme.cancelColor
                    ) {
                        Icon(
                            imageVector = Icons.Default.Delete,
                            contentDescription = "Delete Hives",
                            tint = customTheme.onCancelColor,
                            modifier = Modifier.testTag("DeleteHiveButton")
                        )
                    }
                } else {
                    CircleButton(
                        onTap = { hiveViewModel.onTapAddHiveButton() }
                    ) {
                        Icon(
                            imageVector = Icons.Default.Add,
                            contentDescription = "Add Hive",
                            tint = customTheme.onPrimaryColor,
                            modifier = Modifier.testTag("AddHiveButton")
                        )
                    }
                }
            }
        }
    }
...
        ,
        contentPadding = PaddingValues(8.dp),
    ) {
        // without the key, the list will not update when the list changes
        // this is because the list is not aware of the changes
        items(items = hiveList, key = { it.id }) {hive ->
            HiveListItem(hive, hiveViewModel, navController)
        }
    }

}

@Composable
...
