...
        }
    }

    Container {
        Column(
            modifier = Modifier
                .testTag("Navbar")
                .padding(top = 16.dp, bottom = 16.dp)
                .clip(RoundedCornerShape(16.dp))
                .fillMaxWidth()
                .height(menuHeight.value.dp)
                .background(
                    // gradient from secondary color to onPrimaryColor (top to bottom)
...
